# AgeOfPython

./: .gitignore  AOEInterpreter.py  AOEMain.py  AOEasserter.py  AOEconstants.py  AOEparser.py  AOEprinter.py  AOEscanner.py  AOPMain.py  README.md  Silver.aop  TODO.txt  TuskenMulitfunc.aop  TuskenRail.OLDaop  TuskenRail.aop  data.py  funky.aop  not_the_rail_you_are_looking_for.aop  pyproject.toml  testInput.txt  testInput2.txt
Silver/: BoarHunt.aop  BoarHunt2.aop  ResignRules.aop  TownSizing.aop
Tests/: algorithms.py  issues  test_Integration.py  test_full.py  test_memory.py  test_parcer.py  test_random.py  test_scanner.py
Tests/Test python structures/: test_asignment.py  test_function_definition.py  test_if.py  test_structure_utils.py
Tests/ast_viewing/: ast.json  ast_viewer.html  ast_viewer.py
Tests/import testing/: myMain.aop
Tests/test_ai_files/: TuskenRail copy.py  TuskenRail.py  all_code.py  block_code.py  code_snipits_test.py  compare_boolOp_binOp.py  if_code.py  imported.py  monk_logic.py  (+17 more)
TuskenRai/: RailBoarLure.aop  UserPatchConst.aop  myConst.aop
scraping/: Scraper.py  aoe2scriptEnums.py  aoe2scriptFunctions.py  command_dict.pkl  parameter_dict.pkl  sn_touples_id_name.pkl  strategic_number_dict.pkl
src/: AOEInterpreter.py  AOEMain.py  AOEScraper.py  AOEasserter.py  AOEparser.py  Asserter.py  Compiler.py  Interpreter.py  Main.py  Memory.py  MyLogging.py  Parser.py  Printer.py  Scanner.py  Scraper.py  TrainingWheels.py  commands.py  custom_ast_nodes.py  data.py  enums.py  sudocode.py  tabs_checking.aop  tabs_checking.py  utils.py  utils_display.py
(+18 files in other folders)
