[project]
name = "AgeOfPython"
version = "0.0.1"
description = "compile python code to aoe2script"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "aenum>=3.1.10",
    "colorama>=0.4.6",
    "sortedcontainers>=2.4.0",
]

[dependency-groups]
dev = [
    "bs4<1",
    "pytest>=7.0.1",
]

[tool.pytest.ini_options]
pythonpath = "src"
